Updated GitHub link

--- a/about.html
+++ b/about.html
@@ -201,7 +201,7 @@
             style="margin-left: 20px"
           >
             <a
-              href="https://github.com/kyletscheer/"
+              href="https://github.com/kyletscheer/equitable-distribution"
               target="_blank"
               rel="noopener"
               >View Code</a
