--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             max="200"
             step=".01"
             value="0"
-			style="width: 100%;
+            style="width: 100%"
           />
           <span id="sliderValueDisplay">0.00</span><br /><br />
         </div>
