--- a/about.html
+++ b/about.html
@@ -19,54 +19,44 @@
     />
     <!-- Add Bootstrap JavaScript link (jQuery and Popper.js are required by Bootstrap) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script
       id="MathJax-script"
       async
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
     ></script>
+    <link href="style.css" rel="stylesheet">
+
     <style>
-      .content {
-        padding-bottom: 100px;
-        padding-top: 100px;
-        padding-left: 20px;
-        padding-right: 20px;
-      }
     </style>
   </head>
   <body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="index.html"
-          >Equitable Distribution Calculator</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarResponsive"
-          aria-controls="navbarResponsive"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-          </ul>
-        </div>
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
+  <div class="container">
+    <a class="navbar-brand fw-bold" href="index.html">Equitable Distribution Calculator</a>
+    <div class="navbar-actions">
+      <div class="theme-toggle" id="themeToggle" role="button" aria-label="Toggle theme">
+        <i class="bi bi-sun-fill"></i>
       </div>
-    </nav>
-    <div class="content container mt-4">
-      <h1>About</h1>
+      <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+    <div class="collapse navbar-collapse" id="navbarContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+  <!-- Main Content -->
+  <main class="py-5">
+    <div class="container">
+      <h1 class="mb-4">About</h1>
       <p>
         This tool can be used to distribute a pot of money (such as an estate)
         equitably among a set of people based on their income levels. The less
@@ -197,27 +187,21 @@
         considerations.
       </p>
     </div>
-    <footer class="bg-dark fixed-bottom p-2">
-      <div class="container">
-        <p class="m-0 text-center text-white">
-          &copy;
-          <a href="http://www.kylescheer.com" target="_blank" rel="noopener"
-            >Kyle Scheer</a
-          >
-          <button
-            type="button"
-            class="btn btn-outline-primary"
-            style="margin-left: 20px"
-          >
-            <a
-              href="https://github.com/kyletscheer/equitable-distribution"
-              target="_blank"
-              rel="noopener"
-              >View Code</a
-            >
-          </button>
-        </p>
-      </div>
-    </footer>
+    </main>
+        <!-- Footer -->
+        <footer class="bg-white border-top py-4 mt-auto">
+          <div class="container">
+              <div class="d-flex justify-content-between align-items-center">
+                  <div>
+                      Made by <a href="https://www.kylescheer.com" target="_blank">Kyle Scheer</a>
+                  </div>
+                  <a href="https://github.com/kyletscheer/equitable-distribution" target="_blank">View Code</a>
+              </div>
+          </div>
+      </footer>
+   <!-- Bootstrap Bundle with Popper -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
+
+  <script src="darkmode.js"></script>
   </body>
 </html>
