--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<html lang="en">
-  <head>
-  <!-- Google tag (gtag.js) -->
+<!DOCTYPE html>
+<html lang="en" data-bs-theme="light">
+
+<head>
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MLW82EVC8P"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -9,104 +11,76 @@
 
   gtag('config', 'G-MLW82EVC8P');
 </script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="utf-8" />
-    <title>Equitable Distribution Calculator</title>
-    <!-- Add Bootstrap CSS link -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <!-- Add Bootstrap JavaScript link (jQuery and Popper.js are required by Bootstrap) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Equitable Distribution Calculator</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap Icons -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.1/font/bootstrap-icons.min.css"
+    rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-    <style>
-      #fullOutput {
-        display: none;
-      }
-      #myChart {
-        width: 100%;
-        max-width: 600px;
-      }
-      .form-control {
-        width: 300px;
-      }
-      .content {
-        padding-top: 100px;
-        padding-bottom: 100px;
-      }
-    </style>
-  </head>
-  <body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="index.html"
-          >Equitable Distribution Calculator</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarResponsive"
-          aria-controls="navbarResponsive"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+
+  <link href="style.css" rel="stylesheet">
+  <style>
+    #fullOutput {
+      display: none;
+    }
+    #myChart {
+      width: 100%;
+      max-width: 600px;
+    }
+    .form-control {
+      width: 300px;
+    }
+    .content {
+      padding-top: 100px;
+      padding-bottom: 100px;
+    }
+  </style>
+</head>
+
+<body>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="index.html">Equitable Distribution Calculator</a>
+      <div class="navbar-actions">
+        <div class="theme-toggle" id="themeToggle" role="button" aria-label="Toggle theme">
+          <i class="bi bi-sun-fill"></i>
+        </div>
+        <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-          </ul>
-        </div>
       </div>
-    </nav>
-    <div class="content container mt-4">
+      <div class="collapse navbar-collapse" id="navbarContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Main Content -->
+  <main class="py-5">
+    <div class="container">
       <h1 class="mb-4">Estate Distribution Calculator</h1>
-      <form
-        id="distributionForm"
-        onsubmit="event.preventDefault(); calculateDistribution();"
-      >
+      <form id="distributionForm" onsubmit="event.preventDefault(); calculateDistribution();">
         <div class="form-group">
           <label for="estateAmount">Total Estate Amount:</label>
-          <input
-            type="number"
-            class="form-control"
-            id="estateAmount"
-            placeholder="Ex: 1000000"
-            required
-          />
+          <input type="number" class="form-control" id="estateAmount" placeholder="Ex: 1000000" required />
         </div>
 
         <div class="form-group">
           <label for="fairnessAdjustment">Fairness Adjustment:</label>
-          <input
-            type="number"
-            class="form-control"
-            id="fairnessAdjustment"
-            step="0.01"
-            min="0"
-            max="200"
-            placeholder="Ex: 1"
-            required
-          />
+          <input type="number" class="form-control" id="fairnessAdjustment" step="0.01" min="0" max="200" placeholder="Ex: 1" required />
         </div>
 
         <div class="form-group">
           <label for="incomes">Individual Incomes (comma-separated):</label>
-          <input
-            type="text"
-            class="form-control"
-            id="incomes"
-            placeholder="Ex: 0,10000,25000,100000,1000000"
-            required
-          />
+          <input type="text" class="form-control" id="incomes" placeholder="Ex: 0,10000,25000,100000,1000000" required />
         </div>
 
         <button type="submit" class="btn btn-primary">Calculate</button>
@@ -116,45 +90,30 @@
         <div id="output"></div>
         <canvas id="myChart"></canvas>
         <div id="slider_div">
-          <label for="fairnessAdjustmentSlider"
-            >Fairness Adjustment Slider:</label
-          >
-          <input
-            type="range"
-            class="form-control-range"
-            id="fairnessAdjustmentSlider"
-            min="0"
-            max="200"
-            step=".01"
-            value="0"
-            style="width: 100%"
-          />
+          <label for="fairnessAdjustmentSlider">Fairness Adjustment Slider:</label>
+          <input type="range" class="form-control-range" id="fairnessAdjustmentSlider" min="0" max="200" step=".01" value="0" style="width: 100%" />
           <span id="sliderValueDisplay">0.00</span><br /><br />
         </div>
       </div>
     </div>
-    <footer class="bg-dark fixed-bottom p-2">
-      <div class="container">
-        <p class="m-0 text-center text-white">
-          &copy;
-          <a href="http://www.kylescheer.com" target="_blank" rel="noopener"
-            >Kyle Scheer</a
-          >
-          <button
-            type="button"
-            class="btn btn-outline-primary"
-            style="margin-left: 20px"
-          >
-            <a
-              href="https://github.com/kyletscheer/equitable-distribution"
-              target="_blank"
-              rel="noopener"
-              >View Code</a
-            >
-          </button>
-        </p>
-      </div>
-    </footer>
-    <script src="script.js"></script>
-  </body>
+  </main>
+
+        <!-- Footer -->
+        <footer class="bg-white border-top py-4 mt-auto">
+          <div class="container">
+              <div class="d-flex justify-content-between align-items-center">
+                  <div>
+                      Made by <a href="https://www.kylescheer.com" target="_blank">Kyle Scheer</a>
+                  </div>
+                  <a href="https://github.com/kyletscheer/equitable-distribution" target="_blank">View Code</a>
+              </div>
+          </div>
+      </footer>
+
+  <!-- Bootstrap Bundle with Popper -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
+  <script src="darkmode.js"></script>
+  <script src="script.js"></script>
+</body>
+
 </html>
